syntax = "proto3";
package douyin;
option go_package = "demofeed";

message FeedRequest{
    int64 latestTime = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
    int64 UserID = 2;
}

message  BaseResp {
    int64 statusCode = 1; // 状态码，0-成功，其他值-失败
    string statusMsg = 2; // 返回状态描述
    int64 serviceTime = 3;
}
message FeedResponse {
    BaseResp baseResp = 1;
    repeated Video videoList = 2; // 视频列表
    int64 nextTime = 3; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

message Video {
    int64 id = 1; // 视频唯一标识
    User author = 2; // 视频作者信息
    string playURL = 3; // 视频播放地址
    string coverURL = 4; // 视频封面地址
    int64 favoriteCount = 5; // 视频的点赞总数
    int64 commentCount = 6; // 视频的评论总数
    bool isFavorite = 7; // true-已点赞，false-未点赞
    string title = 8; // 视频标题
}

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 followCount = 3; // 关注总数
  int64 followerCount = 4; // 粉丝总数
  bool isFollow = 5; // true-已关注，false-未关注
}

service FeedService{
	rpc Feed (FeedRequest) returns (FeedResponse) {};
}
